--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,17 @@
 {
+  "functions": {
+    "api/token.js": {
+      "runtime": "nodejs18.x"
+    }
+  },
   "rewrites": [
     {
+      "source": "/",
+      "destination": "/public/index.html"
+    },
+    {
       "source": "/(.*)",
-      "destination": "/index.html"
+      "destination": "/public/$1"
     }
   ]
 }
