--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,8 @@
 {
-  "functions": {
-    "api/token.js": {
-      "runtime": "nodejs18.x"
-    }
-  },
   "rewrites": [
     {
-      "source": "/",
-      "destination": "/public/index.html"
-    },
-    {
       "source": "/(.*)",
-      "destination": "/public/$1"
+      "destination": "/index.html"
     }
   ]
 }
