--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,14 @@
 {
+  "functions": {
+    "api/token.js": {
+      "runtime": "nodejs18.x"
+    }
+  },
   "rewrites": [
+    {
+      "source": "/",
+      "destination": "/index.html"
+    },
     {
       "source": "/(.*)",
       "destination": "/index.html"
